--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+website coded by adasiek#9999 with 💞 and no frontend skills
+
+github.com/essownicy/sleezy-website
+*/
+
 @import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap");
 
 *,
@@ -7,22 +13,24 @@ a {
 }
 
 body {
-	background-color: rgb(22, 22, 22);
+	background-image: url("/assets/blob-scene-haikei.svg");
 }
 
-.container {
+main {
 	display: flex;
 	flex-direction: column;
 	margin: auto;
-	margin-top: 10%;
+	margin-top: 8%;
 	height: auto;
 	width: auto;
-	max-width: 600px;
-	border-radius: 30px;
-	background-color: rgb(30, 30, 30);
-	box-shadow: 0 0 10px 3px #222224;
 }
 
+@media only screen and (max-width: 600px) {
+	main {
+		max-width: 100vw;
+		max-height: 100vh;
+	}
+}
 h1 {
 	color: #1a237e;
 	--start-color: #ff4d4d;
@@ -125,19 +133,27 @@ a {
 }
 
 footer {
-	color: white;
-	text-align: center;
-	font-size: 12px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
 	height: auto;
 	width: 100vw;
-	position: fixed;
-	left: 0;
-	bottom: 0;
+	padding-top: 40px;
+	color: #fff;
 }
 
-footer span {
-	color: white;
-	font-weight: bold;
+footer div {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	justify-content: center;
+	text-align: center;
+	font-size: 8px;
+}
+
+footer a {
+	color: #fff;
 }
 
 .discord-miniprofile {
